@@ -252,6 +252,17 @@ static void alloc_mark_stack();
 GC_bool GC_mark_some(cold_gc_frame)
 ptr_t cold_gc_frame;
 {
+#ifdef MSWIN32
+  /* Windows 98 appears to asynchronously create and remove writable	*/
+  /* memory mappings, for reasons we haven't yet understood.  Since	*/
+  /* we look for writable regions to determine the root set, we may	*/
+  /* try to mark from an address range that disappeared since we 	*/
+  /* started the collection.  Thus we have to recover from faults here. */
+  /* This code does not appear to be necessary for Windows 95/NT/2000.	*/ 
+  /* Note that this code should never generate an incremental GC write	*/
+  /* fault.								*/
+  __try {
+#endif
     switch(GC_mark_state) {
     	case MS_NONE:
     	    return(FALSE);
@@ -342,6 +353,20 @@ ptr_t cold_gc_frame;
     	    ABORT("GC_mark_some: bad state");
     	    return(FALSE);
     }
+#ifdef MSWIN32
+  } __except (GetExceptionCode() == EXCEPTION_ACCESS_VIOLATION ?
+	    EXCEPTION_EXECUTE_HANDLER : EXCEPTION_CONTINUE_SEARCH) {
+#   ifdef PRINTSTATS
+	GC_printf0("Caught ACCESS_VIOLATION in marker. "
+		   "Memory mapping disappeared.\n");
+#   endif /* PRINTSTATS */
+    /* We have bad roots on the stack.  Discard mark stack.  	*/
+    /* Rescan from marked objects.  Redetermine roots.		*/
+    GC_invalidate_mark_state();	
+    scan_ptr = 0;
+    return FALSE;
+  }
+#endif /* MSWIN32 */
 }
 
 
