@@ -1,11 +1,8 @@
 #define GC_VERSION_MAJOR 5
 #define GC_VERSION_MINOR 0
-#define GC_ALPHA_VERSION 7
+#define GC_ALPHA_VERSION GC_NOT_ALPHA
 
 #   define GC_NOT_ALPHA 0xff
-
-/* This is really an unreleased version which doesn't have a real version */
-/* number.								  */
 
 #ifndef GC_NO_VERSION_VAR
 
